# llmops-practice

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
code_snippets/: 03_custom_odm_example.py  dpo_dataset_generation.ipynb  instructor_embeddings.py  synthetic_dataset_generation.ipynb  text_embeddings.py  text_image_embeddings.py
configs/: digital_data_etl.yaml  evaluation.yaml  export_artifact_to_json.yaml  feature_engineering.yaml  training.yaml
data/data_warehouse_raw_data/: articledocument.json  userdocument.json
llm_twin/: settings.py
llm_twin/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  medium.py
llm_twin/application/networks/: __init__.py  base.py  embeddings.py
llm_twin/application/preprocessing/: __init__.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_twin/application/preprocessing/operations/: chunking.py  cleaning.py
llm_twin/application/rag/: base.py  prompt_templates.py  query_expansion.py  reranking.py  retriever.py  self_query.py
llm_twin/application/utils/: misc.py  split_user_full_name.py
llm_twin/domain/: __init__.py  chunks.py  embedded_chunks.py  exceptions.py  inference.py  queries.py  types.py
llm_twin/domain/base/: nosql.py  vector.py
llm_twin/infrastructure/: inference_pipeline_api.py
llm_twin/infrastructure/aws/deploy/: delete_sagemaker_endpoint.py
llm_twin/infrastructure/aws/deploy/huggingface/: config.py  run.py
llm_twin/infrastructure/aws/roles/: create_sagemaker_execution_role.py  create_sagemaker_role.py
llm_twin/infrastructure/db/: mongo.py  qdrant.py
llm_twin/model/: utils.py
llm_twin/model/evaluation/: evaluate.py  sagemaker.py
llm_twin/model/finetuning/: finetune.py  requirements.txt  sagemaker.py
llm_twin/model/inference/: inference.py  run.py  test.py
output/: cleaned_documents.json
pipelines/: __init__.py  digital_data_etl.py  evaluation.py  feature_engineering.py  training.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/evaluation/: evaluate.py
steps/export/: __init__.py  to_json.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/training/: train.py
tools/: data_warehouse.py  ml_service.py  rag.py  run.py
